Adapt facet pill color from palette depending on current theme general color scheme